# selfphish

./: README.md  pyproject.toml
examples/: holography_tf.ipynb  tensor_tomography_tf.py
examples/test_results/: phase_shepp.tiff  spider_hair.tiff
selfphish/: ganrec.py  propagators.py
